@@ -40,35 +40,35 @@ SearchResult::~SearchResult() {
 
 void SearchResult::run() {
     QTimer * m_timer = new QTimer;
-    m_timer->setInterval(3000);
+    m_timer->setInterval(30000);
     int emptyLists = 0;
     while(!isInterruptionRequested()) {
         emptyLists = 0;
-        m_mainwindow->m_searcher->m_mutex1.lock();
+        m_mainwindow->m_searcher->m_mutexFile.lock();
         if(!m_mainwindow->m_search_result_file->isEmpty()) {
             Q_EMIT this->searchResultFile(m_mainwindow->m_search_result_file->dequeue());
-            m_mainwindow->m_searcher->m_mutex1.unlock();
+            m_mainwindow->m_searcher->m_mutexFile.unlock();
         } else {
             emptyLists ++;
-            m_mainwindow->m_searcher->m_mutex1.unlock();
+            m_mainwindow->m_searcher->m_mutexFile.unlock();
         }
-        m_mainwindow->m_searcher->m_mutex2.lock();
+        m_mainwindow->m_searcher->m_mutexDir.lock();
         if(!m_mainwindow->m_search_result_dir->isEmpty()) {
             Q_EMIT this->searchResultDir(m_mainwindow->m_search_result_dir->dequeue());
-            m_mainwindow->m_searcher->m_mutex2.unlock();
+            m_mainwindow->m_searcher->m_mutexDir.unlock();
         } else {
             emptyLists ++;
-            m_mainwindow->m_searcher->m_mutex2.unlock();
+            m_mainwindow->m_searcher->m_mutexDir.unlock();
         }
-        m_mainwindow->m_searcher->m_mutex3.lock();
+        m_mainwindow->m_searcher->m_mutexContent.lock();
 //        if (!m_mainwindow->m_search_result_content->isEmpty())
 //            qDebug() << m_mainwindow->m_search_result_content->head();
         if(!m_mainwindow->m_search_result_content->isEmpty()) {
             Q_EMIT this->searchResultContent(m_mainwindow->m_search_result_content->dequeue());
-            m_mainwindow->m_searcher->m_mutex3.unlock();
+            m_mainwindow->m_searcher->m_mutexContent.unlock();
         } else {
             emptyLists ++;
-            m_mainwindow->m_searcher->m_mutex3.unlock();
+            m_mainwindow->m_searcher->m_mutexContent.unlock();
         }
         if(m_timer->isActive() && m_timer->remainingTime() < 0.01) {
             this->requestInterruption();
