@@ -1,3 +1,12 @@
+ukui-search (0.4.0+0827) v100; urgency=medium
+
+  * Bug 无
+  * 任务号:无
+  * 其他改动：
+  * 修复了解析加密文件时的崩溃问题。
+
+ -- zhangpengfei <zhangpengfei@kylinos.cn>  Fri, 27 Aug 2021 19:57:10 +0800
+
 ukui-search (0.4.0+0709) v101; urgency=medium
 
   * Bug 无
